Tesing feature added

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Delicia</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="./public/images/favicon.png" type="image/png">
-    <link rel="stylesheet" href="./src/styles/style.css">
 </head>
-<body>
+<body class="font-family">
     <div id="root">
         <p>React Not Rendered</p>
     </div>
